<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp"
        android:paddingTop="14dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.25">

            <TextView
                android:id="@+id/textView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/text_view_circle_deactivated"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/_1"
                android:textColor="@color/bpWhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_REGISTRATION"
                android:textColor="@color/bpWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/bpWhite"
            android:layout_marginTop="3dp"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="end">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/text_view_cricle_activated"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/_2"
                android:textColor="@color/bpWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/st_YOUR_DATA"
                android:textColor="@color/bpWhite"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/background"
        app:shapeAppearance="@style/card1"
        app:cardPreventCornerOverlap="false">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        style="@style/customEditText"
                        android:hint="@string/st_firstname" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surname_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surname"
                        style="@style/customEditText"
                        android:hint="@string/st_Surname" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        style="@style/customEditText"
                        android:hint="@string/st_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_number_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_number"
                        style="@style/customEditText"
                        android:hint="@string/st_MobileNumber"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        style="@style/customEditText"
                        android:hint="@string/st_user_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/customEditText"
                        android:hint="@string/st_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:helperText="@string/st_required"
                    app:helperTextEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        style="@style/customEditText"
                        android:hint="@string/st_confirmPassword"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_button"
                    style="@style/customButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/st_ConfirmRegistration"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>