<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Old Password Input Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_password_layout"
            style="@style/customTextInputLayout"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/st_current_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- New Password Text Input Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_layout"
            style="@style/customTextInputLayout"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                style="@style/customEditText"
                android:hint="@string/st_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password Text Input Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retype_new_password_layout"
            style="@style/customTextInputLayout"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/retype_new_password"
                style="@style/customEditText"
                android:hint="@string/st_retype_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_over_button"
            style="@style/customButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/ST_save_changes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/customButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/ST_cancel"
            android:textColor="@color/secondaryDarkColor" />


    </LinearLayout>
</ScrollView>
