<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.5"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/st_height"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/st_width"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/st_long"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/st_hub_colli"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.5"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/primaryColor"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>