<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/background"
        app:shapeAppearance="@style/AppShapeAppearance.LargeComponent"
        app:cardPreventCornerOverlap="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/singin_CompleteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="25dp">

                <ImageView
                    android:id="@+id/log_image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/heuremo_logo"
                    android:contentDescription="@string/ST_todo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customer_name_layout"
                    style="@style/customTextInputLayout"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/customer_name"
                        style="@style/customEditText"
                        android:hint="@string/st_Customer"
                        app:errorEnabled="true"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_layout"
                    style="@style/customTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        style="@style/customEditText"
                        android:hint="@string/st_user_name"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_layout"
                    style="@style/customTextInputLayout"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        style="@style/customEditText"
                        android:hint="@string/st_Enter_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/customButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/st_Login" />

                <TextView
                    android:id="@+id/forget_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/st_Forget_Password"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true" />


            </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>